--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
   <body class="home blog paged paged-2 asides"> 
     <%= render 'shared/nav' %>
     <div id="wrapperheader" class="container_15">
-      <div id="header">
+      <div id="header" style="height: 3em;">
         <div class="headertop">
           <div id="blog-title" class="blogtitle"> 
             <%= link_to '玩会儿', '/' %>
