--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -7,7 +7,7 @@
       <div id="post-11945" class="post-11945 post type-post status-publish format-standard hentry category-asides posthome author-admin1310 asides">
         <div class="">
           <%= link_to material do %>
-            <%= image_tag material.wx_tlimg, style: "width:100%; height:265px; margin-bottom:0px;" %>
+            <%= image_tag material.wx_tlimg, style: "width:100%;margin-bottom:0px;" %>
           <% end %>
         </div>
       </div>
