--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -1007,7 +1007,7 @@ PERSONNALISATION
 
 
 /* Smartphones (landscape) ----------- */
-@media only screen and (min-width : 321px) and (max-width: 768px) {
+@media only screen and (min-width : 100px) and (max-width: 768px) {
 .container_15 .grid_10 {
 	width:100%;
 }
@@ -1126,9 +1126,9 @@ PERSONNALISATION
 }
 */
 
-
 /* Smartphones (portrait) ----------- */
 /*@media only screen and (max-width : 320px)*/
+/*
 @media only screen and (max-width : 768px) 
 {
 .container_15 .grid_10 {
@@ -1171,8 +1171,6 @@ PERSONNALISATION
 #access{display:none;}
 #header{height:7em;}
 .mobileonfooter{display:block}    
-
-/* Navigation */
 	#accessmobile{background:#f1f2f4;background-color: rgba(250, 250, 250, 0.8);display:block;float:left;width:100%;margin:0 auto;text-transform: uppercase;}
 	#accessmobile .menu-header,div.menu{font-size:1.3em;margin-left:0px;}
 	#accessmobile .menu-header ul,div.menu ul{list-style:none;margin:0;}
@@ -1187,3 +1185,4 @@ PERSONNALISATION
 	#accessmobile ul li.current_page_item > a,#accessmobile ul li.current-menu-ancestor > a,#accessmobile ul li.current-menu-item > a,#accessmobile ul li.current-menu-parent > a,* html #accessmobile ul li.current_page_item a,* html #accessmobile ul li.current-menu-ancestor a,* html #accessmobile ul li.current-menu-item a,* html #accessmobile ul li.current-menu-parent a,* html #accessmobile ul li a:hover{background:#444;background:rgba(0,0,0,0.7);color:#fff;}
     
 }
+*/
