--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -269,8 +269,8 @@ iframe, object, embed{max-width: 100%;}
 input#searchsubmitbutton{right:10px;width:100px;}
 
 /*category color*/
-.cat-links {font-size:12px;font-family: 'Fjalla One', sans-serif;line-height:3em;color: #FFF;text-transform: uppercase;margin : -10px 0 0 0;background:#555152;-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.3);-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.3);}
-.cat-links a {font-size:12px;font-family: 'Fjalla One', sans-serif;line-height:3em;color: #FFF;text-transform: uppercase;padding: 4px 6px 4px 6px;}
+.cat-links {font-size:12px;font-family: 'Fjalla One', sans-serif;line-height:1.5em;color: #FFF;text-transform: uppercase;margin : -10px 0 0 0;background:#555152;-moz-box-shadow: 0 1px 3px rgba(0,0,0,0.3);-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.3); padding-left:5px; padding-top:5px;}
+.cat-links a {font-size:12px;font-family: 'Fjalla One', sans-serif;line-height:1.5em;color: #FFF;text-transform: uppercase;padding: 4px 6px 4px 6px;}
 .cat-links a:hover{color:#444; background:transparent}
 
 .headerads{margin:10px 0 0 0;}
