--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,7 +59,7 @@
               </div>
               <ul>
                 <li>
-                  <%= link_to 'http://www.shangjieba.com?fr=wan' do %>
+                  <%= link_to 'http://www.shangjieba.com/weixin/app?fr=wan' do %>
                     下载上街吧, 创建自己的时尚搭配杂志! 一键分享到微信朋友圈, 让小伙伴们惊呆吧。
                   <% end %>
                 </li>
