--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -19,6 +19,12 @@
     </div>
   </div>
   <div class="control-group">
+    <label class="control-label">WeiXinJavascript</label>
+    <div class="controls">
+      <%= f.text_area :wx_js, style:"width:800px;height:100px" %>
+    </div>
+  </div>
+  <div class="control-group">
     <label class="control-label">Css</label>
     <div class="controls">
       <%= f.text_area :css, style:"width:800px;height:100px" %>
