--- a/app/views/admin/materials/_form.html.erb
+++ b/app/views/admin/materials/_form.html.erb
@@ -94,6 +94,18 @@
       <%= f.text_field :wxdesc, required: true, class: "input-xxlarge" %>
     </div>
   </div>
+  <div class="control-group">
+    <label class="control-label">分享</label>
+    <div class="controls">
+      <%= f.text_field :wx_ln, class: "input-xxlarge" %>
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label">广告</label>
+    <div class="controls">
+      <%= f.text_area :wx_ln, style: "width:800px; height:100px;" %>
+    </div>
+  </div>
   <div class="form-actions" style="margin-bottom:0px">
     <%= f.submit '提交', class: 'btn btn-primary' %>
   </div>
