--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -55,6 +55,6 @@
     </div>
   </div>
   <div class="form-actions" style="margin-bottom:0px">
-    <%= f.submit '提交', class: 'btn btn-primary' %>
+    <%= f.submit '提交', class: 'btn btn-primary', id: "tixing" %>
   </div>
 <% end %>
