--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -9,13 +9,17 @@
       <meta charset="utf-8">
       <%= javascript_include_tag "jquery" %>
       <%= ERB.new(@category.meta).result(binding).html_safe %>
+      <% @wx_appid = @material.wx_appid %>
+      <% @wx_url   = @material.wx_url %>
+      <% @wx_title = @material.wx_title %>
+      <% @wx_desc  = @material.wxdesc %>
+      <% @wx_tlimg = @material.wx_tlimg %>
+      <% @wx_ln    = @material.wx_ln %>
       <script type="text/javascript">
-        <% @wx_appid = @material.wx_appid %>
-        <% @wx_url   = @material.wx_url %>
-        <% @wx_title = @material.wx_title %>
-        <% @wx_desc  = @material.wxdesc %>
-        <% @wx_tlimg = @material.wx_tlimg %>
         <%= ERB.new(@category.js).result(binding).html_safe %>
+      </script>
+      <script type="text/javascript">
+        <%= ERB.new(@category.wx_js).result(binding).html_safe %>
       </script>
       <style type="text/css">
         <% @css_image   = @material.images.select{|i| i.state == 1 }[0].try(:body) %>
