--- a/app/views/admin/materials/_form.html.erb
+++ b/app/views/admin/materials/_form.html.erb
@@ -103,11 +103,11 @@
   <div class="control-group">
     <label class="control-label">广告</label>
     <div class="controls">
-      <%= f.text_area :wx_ln, style: "width:800px; height:100px;" %>
+      <%= f.text_area :advertisement, style: "width:800px; height:100px;" %>
     </div>
   </div>
   <div class="form-actions" style="margin-bottom:0px">
-    <%= f.submit '提交', class: 'btn btn-primary' %>
+    <%= f.submit '提交', class: 'btn btn-primary', id: "tixing" %>
   </div>
 <% end %>
 <script type="text/javascript">
