--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -40,13 +40,13 @@
           <div class="widgetblock"> 
             <div class="widgettitleb"> 
               <h3 class="widgettitle">
-                【测试】你在唐朝长啥样？上街吧
+                【测试】你在古代长什么样?
               </h3> 
             </div>
             <ul class="wpinstagram wpinstagram-slideshow live" style="width: 100%;">
               <li style="width:100%; margin-bottom: 5px !important;">
-                <%= link_to "http://m.shangjieba.com/games/info/tc_r?fr=whr" do %>
-                  <%= image_tag "http://mashang.qiniudn.com/tc.jpg", style:"width:100%; margin-bottom:5px;" %>
+                <%= link_to "http://www.wanhuir.com/materials/12?fr=banner" do %>
+                  <%= image_tag "http://gdcs.qiniudn.com/gd.jpg", style:"width:100%; margin-bottom:5px;" %>
                 <% end %>
               </li>
             </ul>
@@ -60,7 +60,7 @@
               <ul>
                 <li>
                   <%= link_to 'http://www.shangjieba.com/weixin/app?fr=wan' do %>
-                    下载上街吧, 创建自己的时尚搭配杂志! 一键分享到微信朋友圈, 让小伙伴们惊呆吧。
+                    上街吧, DIY时尚搭配!
                   <% end %>
                 </li>
               </ul>
