--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<%#<!DOCTYPE html>%>
 <html>
    <% cache @material, skip_digest: true do %>
     <head>
@@ -38,6 +38,10 @@
     <%= ERB.new(@category.html).result(binding).html_safe %>
     <div style="display: none;">
       <script src="http://s5.cnzz.com/stat.php?id=2814783&web_id=2814783" language="JavaScript"></script>
+      <script type="text/javascript">
+        var _bdhmProtocol = (("https:" == document.location.protocol) ? " https://" : " http://");
+        document.write(unescape("%3Cscript src='" + _bdhmProtocol + "hm.baidu.com/h.js%3F78fe6144eeab73287677ab1cec2e325b' type='text/javascript'%3E%3C/script%3E"));
+      </script>
     </div>
   <% end %>
 </html>
