--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,7 +69,7 @@
         </ul>
       </div>
     </div>
-    <%#= render 'shared/mobileonfooter' %>
+    <%= render 'shared/analysis' %>
     <%= render 'shared/footer' %>
   </body>
 </html>
