--- a/app/views/materials/show.html.erb
+++ b/app/views/materials/show.html.erb
@@ -37,6 +37,6 @@
     <% @html_image_3 = @material.images.select{|i| i.state == 14}[0].try(:body) %>
     <%= ERB.new(@category.html).result(binding).html_safe %>
     <%= render "shared/analysis" %>
-    <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id } %>
+    <%= render :partial=>"shared/report", :locals=>{:type=>"pv", :cid=>@category.id, :gid=>@material.id } %>
   <% end %>
 </html>
