--- a/app/views/qq/welcome/gabrielecirulli.html.erb
+++ b/app/views/qq/welcome/gabrielecirulli.html.erb
@@ -70,6 +70,7 @@
   <hr>
 </div>
 
+<script type="text/javascript" charset="utf-8" src="http://fusion.qq.com/fusion_loader?appid=1101255082&platform=<%= @pf %>"></script>
 <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
 <script type="text/javascript" src="/assets/2048/animframe_polyfill.js"></script>
 <script type="text/javascript" src="/assets/2048/keyboard_input_manager.js"></script>
@@ -79,6 +80,30 @@
 <script type="text/javascript" src="/assets/2048/local_score_manager.js"></script>
 <script type="text/javascript" src="/assets/2048/game_manager.js"></script>
 <script type="text/javascript" src="/assets/2048/application.js"></script>
+
+<script type="text/javascript">
+  $(function(){
+      fusion2.dialog.invite
+      ({
+          receiver : "",
+
+          msg  : "邀请你来玩~",
+
+          img : "http://qzonestyle.gtimg.cn/qzonestyle/act/qzone_app_img/app353_353_75.png",
+
+          source : "",
+
+          context : "invite",
+
+          onSuccess : function (opt) {  alert("邀请成功"); },
+
+          onCancel : function (opt) { alert("邀请取消"); },
+
+          onClose : function (opt) {  alert("邀请关闭"); }
+      });
+  })
+
+</script>
 
 </body>
 </html>
