--- a/app/views/qq/welcome/gabrielecirulli.html.erb
+++ b/app/views/qq/welcome/gabrielecirulli.html.erb
@@ -75,6 +75,12 @@
   <hr>
 </div>
 
+
+<div class="footer">
+  版权所有: <a href="http://www.wanhuir.com">上海疏微网络技术公司</a> 客服QQ：2218408443
+</div>
+
+
 <script type="text/javascript" charset="utf-8" src="http://fusion.qq.com/fusion_loader?appid=1101255082&platform=<%= @pf %>"></script>
 <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
 <script type="text/javascript" src="/assets/2048/animframe_polyfill.js"></script>
@@ -113,6 +119,5 @@
   })
 
 </script>
-
 </body>
 </html>
