--- a/app/views/admin/materials/_form.html.erb
+++ b/app/views/admin/materials/_form.html.erb
@@ -44,8 +44,10 @@
                 </ul>
             <% end %>
 
+
+            <%= link_to '编辑问题', [:edit,:admin,q], id: :add_obj, class: "btn btn-mini btn-success", remote: true %>
             <%= link_to '添加问题答案', [:new,:admin,q,:question_answer], id: :add_obj, class: "btn btn-mini btn-success", remote: true %> |
-            <%= link_to "Delete", admin_question_path(q), method: :delete, class: "btn btn-mini btn-success" %>
+            <%= link_to "Delete", admin_question_path(q), method: :delete, confirm: "Are you sure to delete this?", class: "btn btn-mini btn-success" %>
           </div>
           <% end %>
         </div>
