--- a/app/views/qq/welcome/gabrielecirulli.html.erb
+++ b/app/views/qq/welcome/gabrielecirulli.html.erb
@@ -13,6 +13,11 @@
   <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="width=device-width, target-densitydpi=160dpi, initial-scale=1.0, maximum-scale=1, user-scalable=no">
   <meta name="baidu-tc-cerfication" content="e1128bb01fafff38d769e7cfabe50a5d" />
+  <style type="text/css">
+    body{
+        height: 800px;
+    }
+  </style>
 </head>
 <body>
 <div class="container">
@@ -73,12 +78,14 @@
     <strong class="important">玩法:</strong> 按上下左右方向键来控制方格移动，相同的方格可以合并。
   </p>
   <hr>
+
+  <div class="footer">
+    版权所有: <a href="http://www.wanhuir.com">上海疏微网络技术公司</a> 客服QQ：2218408443
+  </div>
 </div>
 
 
-<div class="footer">
-  版权所有: <a href="http://www.wanhuir.com">上海疏微网络技术公司</a> 客服QQ：2218408443
-</div>
+
 
 
 <script type="text/javascript" charset="utf-8" src="http://fusion.qq.com/fusion_loader?appid=1101255082&platform=<%= @pf %>"></script>
