--- a/app/views/qq/welcome/gabrielecirulli.html.erb
+++ b/app/views/qq/welcome/gabrielecirulli.html.erb
@@ -84,10 +84,6 @@
   </div>
 </div>
 
-
-
-
-
 <script type="text/javascript" charset="utf-8" src="http://fusion.qq.com/fusion_loader?appid=1101255082&platform=<%= @pf %>"></script>
 <script src="http://libs.baidu.com/jquery/1.9.0/jquery.js"></script>
 <script type="text/javascript" src="/assets/2048/animframe_polyfill.js"></script>
@@ -102,23 +98,20 @@
 <script type="text/javascript">
   $(function(){
 
+      if(navigator.userAgent.indexOf("MSIE")>0 || navigator.userAgent.indexOf("Windows NT")>0) {
+          alert("为了更好的游戏体验，请使用谷歌或者火狐浏览器！");
+      }
+
       $("#invite_friends").click(function(){
           fusion2.dialog.invite
           ({
               receiver : "",
-
               msg  : "邀请你来玩~",
-
               img : "",
-
               source : "",
-
               context : "invite",
-
               onSuccess : function (opt) {  alert("邀请成功"); },
-
               onCancel : function (opt) { alert("邀请取消"); },
-
               onClose : function (opt) {  alert("邀请关闭"); }
           });
       });
