update for link

--- a/app/views/qq/welcome/gabrielecirulli.html.erb
+++ b/app/views/qq/welcome/gabrielecirulli.html.erb
@@ -80,7 +80,7 @@
   <hr style="margin-bottom: 0">
 
   <div class="footer">
-    声明：此应用由 <a href="http://www.wanhuir.com">上海疏微网络技术公司</a> 提供，若在游戏过程中遇到问题，可以联系QQ：2218408443 <a target=blank href=tencent://message/?uin=2218408443&Site=玩会儿&Menu=yes><img border="0" SRC=http://wpa.qq.com/pa?p=1:2218408443:1 alt="QQ联系"></a>
+    声明：此应用由 <a href="http://www.wanhuir.com" target="_blank">上海疏微网络技术公司</a> 提供，若在游戏过程中遇到问题，可以联系QQ：2218408443 <a target=blank href=tencent://message/?uin=2218408443&Site=玩会儿&Menu=yes><img border="0" SRC=http://wpa.qq.com/pa?p=1:2218408443:1 alt="QQ联系"></a>
   </div>
 </div>
 
